--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -7,5 +7,5 @@
     "allowJs": true,
     "sourceMap": true
   },
-  "files": ["src/index.ts", "./module.d.ts" ]
+  "files": ["src/index.ts", "module.d.ts" ]
 }
